fix: move to using UUIDs instead of seq; fixed warnings & typos
